Overflow fix, main max width added

--- a/Home.css
+++ b/Home.css
@@ -6,6 +6,12 @@
   font-family: "Inter", sans-serif;
 }
 
+main {
+  max-width: 1300px;
+  margin: 0 auto;
+  float: none;
+}
+
 nav {
   width: 100%;
   height: 3rem;
@@ -506,7 +512,8 @@ nav {
 
 .infoArea {
   margin: 0 auto;
-  width: 81.3%;
+  /* 81.3% */
+  width: 90%;
   display: flex;
   justify-content: space-between;
 }
@@ -550,7 +557,7 @@ nav {
 
 .areaContactVideo {
   margin: 70px auto;
-  width: 81.3%;
+  width: 90%;
   display: flex;
   justify-content: space-between;
 }
@@ -792,7 +799,7 @@ footer {
   }
 }
 
-@media (max-width: 780px) {
+@media (max-width: 990px) {
   h1 {
     font-size: 1.2rem;
   }
@@ -923,7 +930,9 @@ footer {
     align-self: center;
     margin: 15px;
   }
+}
 
+@media (max-width: 780px) {
   /* Footer */
 
   .footerTop {
